htrc-ef-api/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ef-api-dev-deployment
spec:
  selector:
    matchLabels:
      app: ef-api-dev-app
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ef-api-dev-app
    spec:
      containers:
        - name: ef-api-dev
          image: ghcr.io/htrc/htrc-ef-api:develop-79cd201
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
      imagePullSecrets:
        - name: dockerconfigjson-github-com
