htrc-ef-api/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ef-api-dev-service
spec:
  selector:
    app: ef-api-dev-app
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
